# ai-digest

./: .dockerignore  .gitignore  DRAFT.md  Dockerfile  LEARNINGS.md  README.md  TODO.md  agents.py  article_processor.py  config.py  db.py  docker-compose.yaml  feeds.json  fetch_article.py  ingest.py  main.py  prompts.py  pyproject.toml  test_output.txt
digests/: agentic-mlops-reality-check-2026-03-12.md  agentic-scaling-and-infrastructure-hygiene-2026-03-12.md  ai-devops-digest-2026-03-31.md  ai-infrastructure-governance-2026-04-04.md  ai-infrastructure-reality-check-agent-efficiency-2026-03-12.md  ai-ops-edge-innovation-2026-snapshot-2026-04-01.md  architectural-resilience-security-in-agentic-infrastructures-2026-03-12.md  edge-llm-ops-highlights-2026-03-29.md  infrastructure-hardening-for-agentic-workflows-2026-03-11.md  infrastructure-reality-checks-from-agent-orchestration-to-control-plane-debugging-2026-03-12.md  mlops-ai-infrastructure-digest-2026-03-12.md  mlops-in-production-agents-security-and-reality-checks-2026-03-12.md  mlops-infrastructure-open-model-deployment-2026-04-03.md  mlops-operations-tooling-2026-03-12.md  operational-complexity-infrastructure-reality-2026-03-12.md
drafts/2026-03-11/: draft-0  draft-1  edits-0
drafts/2026-03-12/: draft-0  draft-1  draft-2  edits-0  edits-1  edits-2
drafts/2026-03-29/: draft-0
drafts/2026-03-31/: draft-0
drafts/2026-04-01/: draft-0  draft-1  edits-0
drafts/2026-04-03/: draft-0  draft-1  draft-2  edits-0  edits-1  edits-2
drafts/2026-04-04/: draft-0  draft-1  edits-0
notes/: LEARNINGS.md  TODO.md
